Fixed spacing issue on header

--- a/resources/sass/forum/forum_layout.scss
+++ b/resources/sass/forum/forum_layout.scss
@@ -7,6 +7,7 @@
 }
 .message-popup {
     display: flex;
+    flex-direction: column;
     position: absolute;
     z-index: 10;
     right: 0;
@@ -14,7 +15,23 @@
     width: 250px;
     height: 50%;
     overflow-y: scroll;
+    .conversation {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        .avatar>img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
+        .content {
+            color: white;
+            font-size: .8rem;
+        }
+    }
 }
+
 #header {
     display: flex;
     flex-direction: row;
@@ -55,8 +72,10 @@
         position: relative;
         margin-top: 7.5px;
     }
-    #admin {
+    .admin {
         position: relative;
+        width: 250px;
+        height: 100px;
     }
     .admin-icon {
         font-size: 3rem;
